<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_users">

    <fragment
        android:id="@+id/navigation_users"
        android:name="com.example.retrofittesting.ui.users.PeopleFragment"
        android:label="@string/title_people"
        tools:layout="@layout/fragment_users" />

    <fragment
        android:id="@+id/navigation_albums"
        android:name="com.example.retrofittesting.ui.albums.AlbumsFragment"
        android:label="@string/title_albums"
        tools:layout="@layout/fragment_albums" />

    <fragment
        android:id="@+id/navigation_posts"
        android:name="com.example.retrofittesting.ui.posts.PostsFragment"
        android:label="@string/title_posts"
        tools:layout="@layout/fragment_posts">
        <action
            android:id="@+id/action_navigation_posts_to_selectedPostFragment"
            app:destination="@id/selectedPostFragment" />
    </fragment>
    <fragment
        android:id="@+id/selectedPostFragment"
        android:name="selectedpost.SelectedPostFragment"
        android:label="fragment_selected_post"
        tools:layout="@layout/fragment_selected_post" />
</navigation>