<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="selectedpost.SelectedPostFragment" >

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/selPost_view_line"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_below="@+id/selPost_view_body"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:background="@color/ColorAccent"
        android:transitionName="@string/trans_post_obj1" />

    <TextView
        android:id="@+id/selPost_view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="sunt aut facere repellat provident occaecati excepturi optio reprehenderit"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:transitionName="@string/trans_post_title" />

    <TextView
        android:id="@+id/selPost_view_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/selPost_view_title"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="quia et suscipit\nsuscipit recusandae consequuntur expedita et cum\nreprehenderit molestiae ut ut quas totam\nnostrum rerum est autem sunt rem eveniet architecto"
        android:textColor="@color/black"
        android:transitionName="@string/trans_post_post" />

    <TextView
        android:id="@+id/selPost_view_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/selPost_view_body"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="01.01.2000"
        android:textSize="12sp"
        android:transitionName="@string/trans_post_date" />

    <TextView
        android:id="@+id/selPost_view_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/selPost_view_body"
        android:layout_marginStart="2dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/imageView"
        android:text="Andrew Nugaev"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/selPost_view_body"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_person_black_18dp" />
</RelativeLayout>